# AequivalentTest

./: Makefile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  env.exemple
API/: pyproject.toml
API-old/: manage.py  pyproject.toml
API-old/E2E/: asgi.py  settings.py  urls.py  wsgi.py
API-old/E2E/api/: admin.py  apps.py  managers.py  serializers.py  tests.py  views.py
API-old/E2E/api/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_email_and_more.py  0003_alter_user_username.py
API-old/E2E/api/models/: __init__.py  chat.py  meeting.py  topics.py  users.py
API/API/: settings.py  urls.py
API/API/core/: apps.py  models.py  serializers.py  views.py
API/API/core/migrations/: 0001_initial.py  0002_alter_user_count_auth_alter_user_count_checkaddr_and_more.py
srcs/api/: Dockerfile
srcs/styleguidist/: Dockerfile
srcs/web/: Dockerfile
